<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mobile Middleware</string>
    <string name="hello_world">Hello mobile world!</string>
    <string name="menu_settings">Settings</string>
    
    
    <string name="interface_barcodes">Barcode</string>
    <string name="interface_bluetooth">Bluetooth</string>
    <string name="interface_ip_based">Internet</string>
    <string name="interface_nfc">NFC</string>
    <string name="interface_sms">SMS</string>
    
    <string name="select_interface">Select interface:</string>
    <string name="send_via">Send via:</string>
    <string name="no_interface_selected">Please select an interface => </string>
    <string name="interface_not_supported">Interface not supported. Please select a different interface.</string>
    
    <string name="button_scan_barcode">Scan Barcode</string>
    <string name="button_send_msg">Send</string>
    <string name="button_change_interface">Change</string>
    <string name="toast_barcode_scan_initiated">Barcode Scan initiated.</string>
    
    <string name="error_initializing_rsa">Public/Private Keypair could not be generated or stored!</string>
    
    <string name="handshake_title">Handshake Wizard</string>
    <string name="handshake_current_msg">Current Message: </string>
    <string name="button_handshake_send">Send Handshake Message</string>
    <string name="button_handshake_receive">Waiting for Handshake Message...</string>
    <string name="error_handshake_init">Hanshake could not be initialized!</string>
    
    <string name="share_key_title">Public Key Exchange</string>
    <string name="button_share_key">Share Key</string>
    <string name="button_receive_key">Receive Key</string>
    <string name="button_continue">Continue</string>

</resources>